--- a/03-Homework/style.css
+++ b/03-Homework/style.css
@@ -105,7 +105,13 @@ header {
   margin-top: 8px;
   height: 500px;
   border: black 5px;
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
 }
+/* } linear-gradient(
+  to top, */
+/* rgba (121, 9, 9, 50) rgba (121, 9, 9, 10) */
 
 .banner h1 {
   position: relative;
@@ -145,6 +151,10 @@ header {
   font-size: 20px;
   color: darkblue;
   font-family: Arial, Helvetica, sans-serif;
+  background-image: url(../Assets/Images/Avatar.png);
+  background-position: left;
+  background-size: 100px;
+  background-repeat: no-repeat;
 }
 
 .floatleft2 {
