--- a/03-Homework/style.css
+++ b/03-Homework/style.css
@@ -18,6 +18,7 @@ a {
   text-decoration: none;
 }
 
+/* NAV BAR_______________________________________________________________ */
 nav {
   display: flex;
   justify-content: space-between;
@@ -27,6 +28,7 @@ nav {
   box-shadow: 2px 2px 12px rgba(0, 0, 0, 0.2);
 }
 
+/* NAV BAR FOT MOBILE SCREEN */
 @media screen and (max-width: 596px) {
   .nav-container {
     flex-direction: column;
@@ -36,19 +38,23 @@ nav {
   }
 }
 
+/* Unordered list to dsiplay flex */
 nav ul {
   display: flex;
 }
+/* Sets the look of the anchors */
 nav ul li a {
   display: flex;
   min-width: 30px;
   min-width: auto;
   margin: 20px;
   font-family: Arial, Helvetica, sans-serif;
-  font-size: 15px;
+  font-size: 20px;
   color: #050505;
+  font-weight: bold;
 }
 
+/* Change the anchors to red on hover */
 nav ul li a:hover {
   color: red;
 }
@@ -60,11 +66,12 @@ nav ul li a:hover {
   }
 }
 
+/* Logo design */
 .logo {
   display: flex;
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
   color: black;
-  font-size: 22px;
+  font-size: 30px;
   background-color: silver;
   padding: 60px;
   border: #050505;
@@ -74,6 +81,7 @@ nav ul li a:hover {
   min-width: 205px;
 }
 
+/* logo for mobile screen */
 @media screen and (max-width: 596px) {
   .logo {
     width: 529px;
@@ -88,12 +96,12 @@ nav ul li a:hover {
   color: #2d2a2a;
 }
 
-/* Header style= static */
-
 header {
   top: 0px;
   width: 100%;
 }
+
+/* banner cover image settings */
 .banner {
   text-align: center;
   color: black;
@@ -107,13 +115,16 @@ header {
       rgba(133, 133, 133, 0.2)
     ),
     url(../Assets/Images/sabri-tuzcu-wunVFNvqhfE-unsplash.jpg);
-  height: 500px;
+  height: 700px;
   margin-top: 30px;
 }
+
+/* revert linear gradient on hover */
 .banner:hover {
   background-image: url(../Assets/Images/sabri-tuzcu-wunVFNvqhfE-unsplash.jpg);
 }
 
+/* settings of the header in the banner , positiion is relative to the parent container*/
 .banner h1 {
   position: relative;
   top: 15px;
@@ -122,7 +133,7 @@ header {
   border-radius: 15px;
   height: 50px;
   padding: 10px;
-  font-size: 20px;
+  font-size: 30px;
   text-align: center;
   justify-content: center;
   align-items: center;
@@ -140,17 +151,19 @@ header {
   border-radius: 10px;
 }
 
+/* Button in the banner */
 .btn:hover {
   background-color: #050505;
   color: white;
 }
 
+/* about me H1 container */
 .floatleft1 {
   display: flex;
   float: left;
-  height: 200px;
+  height: 250px;
   width: 30%;
-  border-right: solid #050505 3px;
+  border-right: solid #050505 5px;
   margin-right: 30px;
   justify-content: center;
   text-align: center;
@@ -164,6 +177,7 @@ header {
   background-repeat: no-repeat;
 }
 
+/* settings for mobile screen for about me section */
 @media screen and (max-width: 596px) {
   .floatleft1 {
     float: none;
@@ -185,18 +199,18 @@ header {
     height: fit-content;
   }
 }
-
+/* My Work section left side */
 .floatleft2 {
   display: flex;
   float: left;
-  height: 800px;
+  height: 1390px;
   width: 30%;
-  border-right: solid #050505 3px;
+  border-right: solid #050505 5px;
   justify-content: center;
   text-align: center;
   align-items: center;
   font-size: 2vw;
-  margin-bottom: 0px;
+  margin-right: 15px;
   font-size: 20px;
   color: darkblue;
   font-family: Arial, Helvetica, sans-serif;
@@ -221,14 +235,6 @@ header {
     align-items: center;
     justify-content: center;
     text-align: center;
-  }
-}
-
-@media screen and (max-width: 596px) {
-  .tile1 {
-    width: 49%;
-  }
-  .tile2 {
     width: 100%;
   }
 }
@@ -251,12 +257,22 @@ header {
   width: auto;
   align-items: center;
 }
-
+/* Paragraph text  */
 .aboutmep {
   line-height: 4vw;
   padding: 2px;
+  font-size: 20px;
 }
 
+/* change in size of text when screen size reduces */
+@media screen and (max-width: 596px) {
+  .aboutmep {
+    font-size: 15px;
+    margin: 0px;
+  }
+}
+
+/* this is the section c ontainer for about me */
 .aboutmes {
   position: relative;
   left: -50px;
@@ -268,12 +284,14 @@ header {
   height: 300px;
 }
 
+/* On hover display a border and differentr backgroubnd */
 .aboutmes:hover {
   background-color: lightgrey;
   height: 100%;
   border: solid white 5px;
 }
 
+/* !UNABLE TO DO ANY SORT OF FELX WRAP OR FLEX POSITIONING!! COULD NOT FIGURE IT OUT, THIS RELATES TO THE IMAGES IN SECTION 2 */
 .decks {
   position: relative;
   left: -50px;
@@ -296,23 +314,33 @@ header {
     margin-top: 100px;
   }
 }
-
+/* iMAGE PARENT CONTAINER */
 .imagedeck {
   flex-wrap: wrap;
-  max-height: 150px;
   float: right;
   padding: 20px;
   width: auto;
-  min-width: 3594.094px;
-  position: relative;
   top: 30px;
   border-radius: 10%;
+}
+/* IMAGE INDIVIUDAL CLASS FOR EACH PICTURE */
+
+.tile2 h3 {
+  position: absolute;
+  top: 0px;
+  right: 500px;
+  padding: 0px;
+  color: white;
+  background-color: black;
+  padding: 10px;
+  border-radius: 10px;
 }
 
 .tile1:hover {
   border: red 5px;
 }
 
+/* CONTACT ME SECTION */
 .contactmes {
   display: flex;
   position: relative;
@@ -368,6 +396,7 @@ header {
 }
 
 .floatright3 a {
+  text-decoration: none;
   display: flex;
   flex-direction: row;
   justify-content: center;
@@ -380,10 +409,21 @@ header {
   font-family: Arial, Helvetica, sans-serif;
   margin-right: 10%;
   margin-left: 5%;
+  font-weight: bold;
+  background-color: white;
+  padding: 20px;
+  border-radius: 10px;
 }
 
 @media screen and (max-width: 800px) {
   .floatright3 {
     flex-direction: column;
+  }
+}
+
+@media screen and (max-width: 800px) {
+  .floatright3 a {
+    padding: 5px;
+    margin: 5px;
   }
 }
