--- a/03-Homework/style.css
+++ b/03-Homework/style.css
@@ -26,6 +26,7 @@ nav {
   height: 160px;
   background-color: white;
   box-shadow: 2px 2px 12px rgba(0, 0, 0, 0.2);
+  width: 100%;
 }
 
 /* NAV BAR FOT MOBILE SCREEN */
@@ -48,9 +49,9 @@ nav ul li a {
   min-width: 30px;
   min-width: auto;
   margin: 20px;
-  margin-left: 100px;
+  margin-right: 20px;
   font-family: Arial, Helvetica, sans-serif;
-  font-size: 20px;
+  font-size: 15px;
   color: #050505;
   font-weight: bold;
 }
@@ -250,7 +251,7 @@ header {
 .floatleft2 {
   display: flex;
   float: left;
-  height: 1390px;
+  height: 1400px;
   width: 30%;
   border-right: solid #050505 5px;
   justify-content: center;
