--- a/Assets/style.css
+++ b/Assets/style.css
@@ -33,10 +33,11 @@ nav {
 /* NAV BAR FOT MOBILE SCREEN */
 @media screen and (max-width: 596px) {
   .nav-container {
-    flex-direction: column;
+    flex-direction: row;
     text-align: center;
     position: relative;
     height: 100%;
+    width: 100%;
   }
 }
 
@@ -57,6 +58,16 @@ nav ul li a {
   font-weight: bold;
 }
 
+@media screen and (max-width: 700px) {
+  nav ul {
+    width: 100%;
+    margin: 0px;
+    float: left;
+    padding: 0px;
+    width: 300px;
+  }
+}
+
 /* Change the anchors to red on hover */
 nav ul li a:hover {
   color: red;
@@ -69,8 +80,8 @@ nav ul li a:hover {
     margin: 30px;
     text-align: center;
     margin-bottom: 40px;
-    justify-content: center;
-    align-items: center;
+    justify-content: left;
+    align-items: left;
   }
 }
 
@@ -92,7 +103,7 @@ nav ul li a:hover {
 /* logo for mobile screen */
 @media screen and (max-width: 596px) {
   .logo {
-    width: 529px;
+    width: 100%;
     align-items: center;
     text-align: center;
     justify-content: center;
@@ -378,6 +389,7 @@ header {
 }
 
 .card0 {
+  position: relative;
   padding: 10px;
   text-align: center;
   border-style: solid;
