--- a/Assets/style.css
+++ b/Assets/style.css
@@ -198,6 +198,10 @@ header {
   justify-content: center;
 }
 
+.aboutmes:hover {
+  font-weight: bold;
+}
+
 @media screen and (max-width: 1000px) {
   .aboutmes {
     flex-direction: column;
@@ -290,9 +294,8 @@ header {
 /* Paragraph text  */
 .aboutmep {
   flex-wrap: wrap;
-  line-height: 4vw;
   padding: 2px;
-  font-size: 40px;
+  font-size: 30px;
   text-align: center;
   margin-bottom: 10px;
   width: 70%;
@@ -408,6 +411,12 @@ header {
   object-fit: fill;
 }
 
+.card0:hover {
+  -ms-transform: scale(1.2); /* IE 9 */
+  -webkit-transform: scale(1.2); /* Safari 3-8 */
+  transform: scale(1.2);
+}
+
 /* CONTACT ME SECTION-------------------------------------------------------------------------- */
 .contactmes {
   position: absolute;
@@ -474,4 +483,27 @@ header {
   padding: 30px;
   border-radius: 10px;
   width: fit-content;
+}
+
+.anemail:hover {
+  -ms-transform: scale(1.2); /* IE 9 */
+  -webkit-transform: scale(1.2); /* Safari 3-8 */
+  transform: scale(1.2);
+}
+
+.anlink:hover {
+  -ms-transform: scale(1.2); /* IE 9 */
+  -webkit-transform: scale(1.2); /* Safari 3-8 */
+  transform: scale(1.2);
+}
+
+.anface:hover {
+  -ms-transform: scale(1.2); /* IE 9 */
+  -webkit-transform: scale(1.2); /* Safari 3-8 */
+  transform: scale(1.2);
+}
+.antwitter:hover {
+  -ms-transform: scale(1.2); /* IE 9 */
+  -webkit-transform: scale(1.2); /* Safari 3-8 */
+  transform: scale(1.2);
 }
