--- a/Assets/style.css
+++ b/Assets/style.css
@@ -211,6 +211,7 @@ header {
 }
 
 .floatleft1 {
+  position: relative;
   flex-direction: row;
   justify-content: space-between;
   display: flex;
@@ -219,12 +220,12 @@ header {
   border-right: solid #050505 5px;
   text-align: center;
   align-items: center;
-  font-size: 40px;
+  font-size: 30 px;
   color: darkblue;
   font-family: Arial, Helvetica, sans-serif;
   padding: 30px;
   margin: 10px;
-  left: 0px;
+  left: -60px;
   height: 500px;
 }
 @media screen and (max-width: 596px) {
@@ -349,7 +350,7 @@ header {
   border-right: solid #050505 5px;
   text-align: center;
   align-items: center;
-  font-size: 40px;
+  font-size: 30px;
   color: darkblue;
   font-family: Arial, Helvetica, sans-serif;
   padding: 30px;
@@ -452,6 +453,7 @@ header {
 }
 
 .floatleft3 {
+  position: relative;
   display: flex;
   flex-wrap: wrap;
   display: flex;
@@ -459,12 +461,12 @@ header {
   border-right: solid #050505 5px;
   text-align: center;
   align-items: center;
-  font-size: 40px;
+  font-size: 30px;
   color: darkblue;
   font-family: Arial, Helvetica, sans-serif;
   padding: 30px;
   margin: 10px;
-  padding-right: 180px;
+  left: -97px;
 }
 
 @media screen and (max-width: 1200px) {
