--- a/Assets/style.css
+++ b/Assets/style.css
@@ -434,11 +434,9 @@ header {
 
 /* CONTACT ME SECTION-------------------------------------------------------------------------- */
 .contactmes {
-  position: absolute;
   display: flex;
-  justify-content: center;
   flex-direction: row;
-  flex-wrap: wrap;
+
   left: -50px;
   height: 300px;
   margin: 50px;
@@ -466,7 +464,7 @@ header {
   font-family: Arial, Helvetica, sans-serif;
   padding: 30px;
   margin: 10px;
-  left: -97px;
+  width: 400px;
 }
 
 @media screen and (max-width: 1200px) {
