--- a/Assets/style.css
+++ b/Assets/style.css
@@ -33,7 +33,6 @@ nav {
 /* NAV BAR FOT MOBILE SCREEN */
 @media screen and (max-width: 596px) {
   .nav-container {
-    flex-direction: row;
     text-align: center;
     position: relative;
     height: 100%;
@@ -58,14 +57,25 @@ nav ul li a {
   font-weight: bold;
 }
 
-@media screen and (max-width: 700px) {
+@media screen and (max-width: 596px) {
   nav ul {
+    flex-direction: column;
     width: 100%;
     margin: 0px;
     float: left;
     padding: 0px;
     width: 300px;
     font-size: 20px;
+  }
+}
+
+@media screen and (max-width: 596px) {
+  .active {
+    padding: 30px;
+    line-height: 100px;
+    background-color: #050505;
+    color: orange;
+    border-radius: 30px;
   }
 }
 
@@ -163,7 +173,8 @@ header {
 
 @media screen and (max-width: 770px) {
   .banner h1 {
-    height: 200px;
+    height: 100px;
+    font-size: 30px;
   }
 }
 
@@ -232,7 +243,7 @@ header {
   .floatleft1 {
     flex-direction: column;
     border: none;
-    margin-top: 1000px;
+    margin-top: 400px;
   }
 }
 
@@ -274,11 +285,10 @@ header {
 @media screen and (max-width: 1000px) {
   .floatleft1 h1 {
     display: flex;
-    color: white;
     width: fit-content;
     height: fit-content;
     float: right;
-    font-size: 60px;
+    font-size: 40px;
     border: none;
   }
 }
@@ -335,7 +345,7 @@ header {
 @media screen and (max-width: 1000px) {
   .imageparentcontainer {
     flex-direction: column;
-    margin-top: 1000px;
+    margin-top: 700px;
     justify-content: center;
     align-items: center;
   }
@@ -376,6 +386,11 @@ header {
   align-items: center;
   font: 20px;
   height: 1000px;
+}
+@media screen and (max-width: 1000px) {
+  .carddeck {
+    width: 100%;
+  }
 }
 
 .card0,
@@ -443,10 +458,15 @@ header {
   width: 100%;
 }
 
-@media screen and (max-width: 800px) {
+@media screen and (max-width: 596px) {
   .contactmes {
-    flex-direction: row;
+    flex-direction: column;
     justify-items: center;
+    width: 100%;
+    height: 500px;
+    left: 100px;
+    margin: 0px;
+    width: 400px;
   }
 }
 
@@ -472,6 +492,17 @@ header {
     border-right: none;
     border-bottom: solid black 5px;
     height: 300px;
+    text-align: center;
+  }
+}
+
+@media screen and (max-width: 596px) {
+  .floatleft3 {
+    border-right: none;
+    border-bottom: solid black 5px;
+    height: 500px;
+    text-align: center;
+    width: 350px;
   }
 }
 
@@ -497,6 +528,7 @@ header {
   padding: 30px;
   border-radius: 10px;
   width: fit-content;
+  text-decoration: none;
 }
 
 .anemail:hover {
